<resources>

    <string name="app_name">MERA CALC</string>
    <string name="btn_clear">C</string>
    <string name="btn_brl">(</string>
    <string name="btn_brr">)</string>
    <string name="btn_per">%</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_div">/</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_multi">x</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_sub">-</string>
    <string name="btn_0">0</string>
    <string name="btn_dec">.</string>
    <string name="btn_res">=</string>
    <string name="btn_add">+</string>
    <string name="ClearHistory">Clear History</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
