<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_clear"
                    android:text="@string/btn_clear"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_brl"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_brl"
                    android:text="@string/btn_brl"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_brr"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_brr"
                    android:text="@string/btn_brr"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_per"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_per"
                    android:text="@string/btn_per"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="40sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_7"
                    android:text="@string/btn_7"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_8"
                    android:text="@string/btn_8"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_9"
                    android:text="@string/btn_9"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_div"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_div"
                    android:text="@string/btn_div"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="40sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_4"
                    android:text="@string/btn_4"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_5"
                    android:text="@string/btn_5"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_6"
                    android:text="@string/btn_6"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_multi"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_mult"
                    android:text="@string/btn_multi"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="40sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_1"
                    android:text="@string/btn_1"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_2"
                    android:text="@string/btn_2"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_3"
                    android:text="@string/btn_3"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_sub"
                    android:text="@string/btn_sub"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="40sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_0"
                    android:text="@string/btn_0"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_dec"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_dec"
                    android:text="@string/btn_dec"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_res"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_result"
                    android:onClick="Result"
                    android:text="@string/btn_res"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_layout"
                    android:onClick="btn_add"
                    android:text="@string/btn_add"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="40sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/ques"
        android:autofillHints="false"
        android:labelFor="@id/ques"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:gravity="end"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@id/ans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/ans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:gravity="end"
        android:inputType="textPersonName"
        android:labelFor="@id/ans"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ques" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ans"
        app:layout_constraintVertical_weight="1">

        <Button
            android:id="@+id/btn_history"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTintMode="add"
            android:background="@drawable/ic_baseline_history_24"
            android:onClick="History"
            android:textColor="@android:color/holo_green_light"
            android:textSize="40sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>